<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181F22"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#A1FF9800"
        android:text="@string/addbimovie"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MovieList"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/MovieList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#A1FF9800"
        android:text="@string/moivelist"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonUpdate" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#181F22"
        android:contentDescription="@string/menu"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_circle_left_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="131dp"
        android:layout_height="23dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/movieinsert"
        android:textColor="#B37D2D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton16"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/moviename"
        android:layout_width="218dp"
        android:layout_height="34dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/moviename"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#F3F0F0"
        android:textColorHint="#B39D7E"
        app:layout_constraintBottom_toTopOf="@+id/movietype"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cAdd"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/movietype"
        android:layout_width="213dp"
        android:layout_height="34dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Movietype"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        android:textColorHint="#B39D7E"
        app:layout_constraintBottom_toTopOf="@+id/moviehours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviename"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/moviedescription"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#B39D7E"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviestatus"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/moviehours"
        android:layout_width="216dp"
        android:layout_height="34dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/moviehours"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#B39D7E"
        app:layout_constraintBottom_toTopOf="@+id/moviestatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movietype"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/moviestatus"
        android:layout_width="216dp"
        android:layout_height="34dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/drop"
        android:ems="10"
        android:hint="@string/MovieStatus"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#B39D7E"
        app:layout_constraintBottom_toTopOf="@+id/moviedescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviehours"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/divider"
        android:layout_width="421dp"
        android:layout_height="5dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#B37D2D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton16" />

    <ImageView
        android:id="@+id/movieimage1"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:contentDescription="@string/Coming_Soon"
        app:layout_constraintBottom_toTopOf="@+id/mAdd"
        app:layout_constraintEnd_toStartOf="@+id/coverimage1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/coverimage1"
        android:layout_width="162dp"
        android:layout_height="147dp"
        android:contentDescription="@string/MovieImage"
        app:layout_constraintBottom_toTopOf="@+id/cAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/movieimage1"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/mAdd"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:backgroundTint="#A1FF9800"
        android:text="@string/chooseimage"
        app:layout_constraintBottom_toTopOf="@+id/moviename"
        app:layout_constraintEnd_toStartOf="@+id/cAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieimage1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/cAdd"
        android:layout_width="175dp"
        android:layout_height="53dp"
        android:backgroundTint="#A1FF9800"
        android:text="@string/choosecoverimage"
        app:layout_constraintBottom_toTopOf="@+id/moviename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mAdd"
        app:layout_constraintTop_toBottomOf="@+id/coverimage1"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>